--- a/src/routes/Dashboard/index.scss
+++ b/src/routes/Dashboard/index.scss
@@ -23,6 +23,9 @@
                 font-size: 24px;
                 font-weight: bold;
                 margin-bottom: 20px;
+                span {
+                    font-weight: 400;
+                }
             }
             .button__receive {
                 width: 280px;
