--- a/src/routes/Dashboard/index.scss
+++ b/src/routes/Dashboard/index.scss
@@ -19,12 +19,17 @@
                 float: right;
             }
             .dialog__text {
-                text-align: center;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
                 font-size: 24px;
                 font-weight: bold;
                 margin-bottom: 20px;
                 span {
                     font-weight: 400;
+                    font-size: 16px;
+                    margin-top: 10px;
+                    margin-left: 5px;
                 }
             }
             .button__receive {
