--- a/src/routes/HomePage/index.scss
+++ b/src/routes/HomePage/index.scss
@@ -3,16 +3,30 @@
 @media screen and (min-width: 880px) {
     .HomePage {
         z-index: -1;
+        .space {
+            height: 200px;
+            width: 100%;
+            background-color: #ffffff;
+        }
+        .space1 {
+            height: 140px;
+            width: 100%;
+            background-color: #ffffff;
+        }
         .on__chain {
-           padding: 200px 0 80px 0;
-           -webkit-animation-duration: 2s;
-           animation-duration: 2s;
-           -webkit-animation-fill-mode: both;
-           animation-fill-mode: both;
            display: flex;
            flex-direction: row;
            justify-content: center;
            .texts {
+               -webkit-animation-duration: 2s;
+               animation-duration: 2s;
+               -webkit-animation-fill-mode: both;
+               animation-fill-mode: both;
+               display: flex;
+               flex-direction: column;
+               background-color: #ffffff;
+               box-shadow: -10px 0px 30px 1px #ffffff, 10px 0px 30px 1px white;
+               padding: 0 80px;
            }
         }
         .pink__text {
