updated links fixed unloading issue

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -89,6 +89,12 @@
                             opacity: 0.8;
                         }
                     }
+                    img {
+                        width: 18px;
+                    }
+                    .tg {
+                        width: 22px;
+                    }
                 }
             }
             .button__signup {
