--- a/src/routes/HomePage/index.scss
+++ b/src/routes/HomePage/index.scss
@@ -518,12 +518,10 @@
             }
         }
         .faq__container__title {
-            font-size: 40px;
+            font-size: 30px;
             color: #2a58b5;
-            margin-bottom: 30px;
-            @media screen and (max-width: 880px) {
-                text-align: center;
-            }
+            margin-bottom: 60px;
+            text-align: center;
         }
         .partners {
             display: flex;
@@ -533,13 +531,12 @@
                 flex-direction: column;
             }
             .logo {
-                width: 20%;
+                width: 100px;
                 margin: auto 0;
                 cursor: pointer;
                 @media screen and (max-width: 880px) {
                     margin: 10px auto;
-                    width: 80%;
-                    max-width: 200px;
+                    width: 100px;
                 }
                 img {
                     width: 100%;
