--- a/src/routes/Dashboard/index.scss
+++ b/src/routes/Dashboard/index.scss
@@ -61,6 +61,7 @@
             justify-content: center;
             @media screen and (max-width: 1240px) {
                 flex-direction: column;
+                align-items: center;
             }
             .outer {
                 position: relative;
